Issue #210840 Task Make Storylingo App Responsive Should work on Mobile and Tablet

--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ h1 {
     width: 400px;
    }
 }
-.storylingo-img{
+.storyling-logo{
   cursor: pointer;
   height: 25px;
 }
